# doing

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cli.usage.kdl
.agents/agents/code-reviewer/: SKILL.md
.agents/agents/doc-writer/: SKILL.md
.agents/agents/test-runner/: SKILL.md
.agents/skills/changelog/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/format/: SKILL.md
.config/: .yamlfmt  editorconfig-checker.json  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  docs.yml  release.yml
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs  loader.rs  paths.rs
crates/error/: Cargo.toml  README.md
crates/error/src/: lib.rs
crates/ops/: Cargo.toml  README.md
crates/ops/src/: autotag.rs  backup.rs  filter.rs  lib.rs  search.rs  tag_filter.rs  tag_query.rs  undo.rs
crates/plugins/: Cargo.toml  README.md
crates/plugins/src/: byday.rs  csv.rs  dayone.rs  doing.rs  helpers.rs  html.rs  import.rs  json.rs  lib.rs  markdown.rs  taskpaper.rs  timeline.rs
crates/plugins/src/import/: calendar.rs  doing.rs  json.rs  timing.rs
crates/taskpaper/: Cargo.toml  README.md
crates/taskpaper/src/: document.rs  entries.rs  io.rs  lib.rs  note.rs  parser.rs  section.rs  serializer.rs  tags.rs
crates/template/: Cargo.toml  README.md
crates/template/src/: colors.rs  lib.rs  parser.rs  renderer.rs  totals.rs  wrap.rs
crates/time/: Cargo.toml  README.md
crates/time/src/: duration.rs  format.rs  lib.rs  parser.rs  range.rs
docs/: README.md  doing.usage.kdl
docs/design/: 0001-integration-test-structure.md  0002-cargo-workspace-migration.md  README.md
docs/dev/: README.md  code-style.md  commits.md  tasks.md  testing.md
docs/deviations/: 0001-configuration-format.md  0002-hyphenated-command-names.md  0003-fzf-not-auto-installed.md  0004-json-output-structure.md  0005-no-config-update-refresh.md  0006-update-is-self-update.md  0007-no-help-compact-flag.md  0008-select-no-menu-not-force.md  0009-select-finish-uppercase-f.md  0010-quiet-no-short-flag.md  0011-age-no-short-flag.md  0012-redo-file-no-short-flag.md  0013-completion-file-no-short-flag.md  0014-config-home-platform-native.md  README.md
docs/policy/: README.md  ai.md  security.md
docs/process/: README.md  labels.md  writing-adrs.md  writing-deviations.md  writing-rfcs.md
docs/site/: deviations.md  index.md  package.json
docs/site/.vitepress/: config.ts
docs/site/.vitepress/theme/: custom.css
docs/site/cli/: again.md  archive.md  autotag.md  budget.md  cancel.md  changes.md  choose.md  colors.md  commands.md  completion.md  config.md  done.md  finish.md  grep.md  import.md  last.md  mark.md  meanwhile.md  note.md  now.md  on.md  open.md  plugins.md  recent.md  redo.md  reset.md  rotate.md  sections.md  select.md  self-update.md  show.md  since.md  tag-dir.md  tag.md  tags.md  template.md  today.md  undo.md  view.md  views.md  (+1 more)
docs/site/configuration/: index.md
docs/site/getting-started/: concepts.md  installation.md  quick-start.md
docs/site/public/: CNAME  install
script/: install.sh
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  ops.rs  paths.rs  plugins.rs  taskpaper.rs  template.rs  time.rs
src/cli/: args.rs  commands.rs  editor.rs  entry_location.rs  interactive.rs  pager.rs  process.rs  test_helpers.rs  title_note.rs
src/cli/commands/: actions.rs  again.rs  archive.rs  autotag.rs  budget.rs  cancel.rs  changes.rs  choose.rs  colors.rs  commands.rs  commands_accepting.rs  completion.rs  config.rs  done.rs  finish.rs  grep.rs  import.rs  last.rs  mark.rs  meanwhile.rs  note.rs  now.rs  on.rs  open.rs  plugins.rs  recent.rs  redo.rs  reset.rs  rotate.rs  sections.rs  select.rs  show.rs  since.rs  tag.rs  tag_dir.rs  tags.rs  template.rs  today.rs  undo.rs  update.rs  (+3 more)
src/config/: env.rs  loader.rs
src/ops/: autotag.rs  backup.rs  extract_note.rs  filter.rs  search.rs  tag_filter.rs  tag_query.rs  undo.rs
src/plugins/: byday.rs  csv.rs  dayone.rs  doing.rs  helpers.rs  html.rs  import.rs  json.rs  markdown.rs  taskpaper.rs  timeline.rs
src/plugins/import/: calendar.rs  doing.rs  json.rs  timing.rs
src/taskpaper/: document.rs  entries.rs  io.rs  note.rs  parser.rs  section.rs  serializer.rs  tags.rs
src/template/: colors.rs  parser.rs  renderer.rs  totals.rs  wrap.rs
src/time/: duration.rs  format.rs  parser.rs  range.rs
tasks/bench/: compile
tasks/check/: config  error  ops  plugins  taskpaper  template  time
tasks/dev/: docsite
tasks/format/: yaml
tasks/generate/: manpages
tasks/lint/: github-actions  markdown  yaml
tasks/test/: _default  config  error  integration  ops  plugins  taskpaper  template  time  unit
tests/integration/: again.rs  archive.rs  autotag.rs  behavior.rs  budget.rs  cancel.rs  changes.rs  chronify.rs  colors.rs  commands.rs  config.rs  default_config.rs  done.rs  file_sort.rs  finish.rs  global_flags.rs  grep.rs  helpers.rs  import_doing.rs  import_timing.rs  interactive.rs  last.rs  main.rs  mark.rs  meanwhile.rs  meta.rs  note.rs  now.rs  on.rs  open.rs  output.rs  recent.rs  reset.rs  rotate.rs  sections.rs  select.rs  show.rs  show_dates.rs  show_display.rs  show_search.rs  (+9 more)
tests/integration/behavior/: chronify.rs  file_sort.rs  global_flags.rs  interactive.rs  output.rs  smoke.rs  template.rs
tests/integration/behavior/chronify/: when_absolute_time_is_provided.rs  when_chronify_is_used_with_different_flags.rs  when_date_range_is_provided.rs  when_date_string_is_provided.rs  (+4 more)
tests/integration/commands/: again.rs  archive.rs  budget.rs  cancel.rs  changes.rs  colors.rs  completion.rs  config.rs  done.rs  finish.rs  grep.rs  help.rs  import.rs  last.rs  mark.rs  meanwhile.rs  note.rs  now.rs  on.rs  open.rs  plugins.rs  recent.rs  redo.rs  reset.rs  rotate.rs  sections.rs  select.rs  show.rs  since.rs  tag.rs  tag_dir.rs  tags.rs  template.rs  undo.rs  update.rs  view.rs  views.rs  yesterday.rs
tests/integration/support/: helpers.rs
(+506 files in other folders)
