[package]
categories = ["command-line-utilities"]
description = "A command line tool for remembering what you were doing and tracking what you've done"
edition = "2024"
include = ["/CHANGELOG.md", "/LICENSE", "/README.md", "/src/"]
keywords = ["cli", "time-tracking", "productivity", "todo"]
license = "MIT"
name = "doing"
readme = "README.md"
repository = "https://github.com/aaronmallen/doing"
rust-version = "1.88.0"
version = "0.0.1-alpha.6"

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"

[dependencies]
chrono = { features = ["serde"], version = "0.4" }
clap = { features = ["derive"], version = "4" }
dialoguer = "0.12"
dir_spec = "0.5"
env_logger = "0.11"
json_comments = "0.2"
log = "0.4"
md5 = "0.8"
regex = "1"
self_update = { default-features = false, features = [
  "archive-tar",
  "compression-flate2",
  "reqwest",
  "rustls",
], version = "0.43" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
sublime_fuzzy = "0.7"
tempfile = "3"
thiserror = "2"
toml = "1"
toml_edit = "0.25"
typed-env = "0.3"
yaml_serde = "0.10"
yansi = { features = ["detect-env", "detect-tty", "hyperlink"], version = "1" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
