
[package]
categories = ["command-line-utilities"]
description = "A command line tool for remembering what you were doing and tracking what you've done"
edition.workspace = true
include = ["/CHANGELOG.md", "/LICENSE", "/README.md", "/src/"]
keywords = ["cli", "time-tracking", "productivity", "todo"]
license.workspace = true
name = "doing"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.1-alpha.7"

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.metadata.workspaces]
independent = true

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/aaronmallen/doing"
rust-version = "1.88.0"

[workspace.dependencies]
assert_cmd = "2"
chrono = { features = ["serde"], version = "0.4" }
clap = { features = ["derive", "suggestions"], version = "4" }
clap_complete = "4"
clap_mangen = "0.2"
dialoguer = "0.12"
dir_spec = "0.5"
doing-config = { path = "crates/config" }
doing-error = { path = "crates/error" }
doing-ops = { path = "crates/ops" }
doing-plugins = { path = "crates/plugins" }
doing-taskpaper = { path = "crates/taskpaper" }
doing-template = { path = "crates/template" }
doing-time = { path = "crates/time" }
env_logger = "0.11"
indexmap = "2"
json_comments = "0.2"
log = "0.4"
md5 = "0.8"
predicates = "3"
pretty_assertions = "1"
regex = "1"
self_update = { default-features = false, features = [
  "archive-tar",
  "compression-flate2",
  "reqwest",
  "rustls",
], version = "0.43" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strsim = "0.11"
sublime_fuzzy = "0.7"
tempfile = "3"
thiserror = "2"
toml = "1"
toml_edit = "0.25"
typed-env = "0.3"
yaml_serde = "0.10"
yansi = { features = ["detect-env", "detect-tty", "hyperlink"], version = "1" }

[dependencies]
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
dialoguer.workspace = true
dir_spec.workspace = true
doing-config.workspace = true
doing-error.workspace = true
doing-ops.workspace = true
doing-plugins.workspace = true
doing-taskpaper.workspace = true
doing-template.workspace = true
doing-time.workspace = true
env_logger.workspace = true
log.workspace = true
regex.workspace = true
self_update.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
tempfile.workspace = true
toml.workspace = true
toml_edit.workspace = true
yaml_serde.workspace = true
yansi.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
