[package]
categories = ["command-line-utilities", "config"]
description = "Configuration loading and types for the doing CLI"
edition.workspace = true
keywords = ["cli", "doing", "time-tracking", "configuration"]
license.workspace = true
name = "doing-config"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.4"

[package.metadata.workspaces]
independent = true

[dependencies]
dir_spec.workspace = true
doing-error.workspace = true
doing-time.workspace = true
json_comments.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
typed-env.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
