[package]
categories = ["command-line-utilities"]
description = "Domain operations for the doing CLI"
edition.workspace = true
keywords = ["cli", "doing", "time-tracking"]
license.workspace = true
name = "doing-ops"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.5"

[package.metadata.workspaces]
independent = true

[dependencies]
chrono.workspace = true
doing-config.workspace = true
doing-error.workspace = true
doing-taskpaper.workspace = true
doing-time.workspace = true
indexmap.workspace = true
regex.workspace = true
sublime_fuzzy.workspace = true
tempfile.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
