[package]
description = "TaskPaper document parser and serializer for the doing CLI"
edition.workspace = true
license.workspace = true
name = "doing-taskpaper"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
chrono.workspace = true
doing-error.workspace = true
md5.workspace = true
regex.workspace = true
tempfile.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
